fix python install in container

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,6 +1,8 @@
 FROM restic/restic:0.17.3
 
-RUN apk update && apk add python3 \ 
+RUN apk update && apk add \
+    python3 \
+    py3-pip \
     dcron \
     mariadb-client \
     postgresql-client \
@@ -8,7 +10,8 @@ RUN apk update && apk add python3 \
 
 ADD . /restic-compose-backup
 WORKDIR /restic-compose-backup
-RUN pip3 install -U pip setuptools wheel && pip3 install -e .
+RUN pip install -U pip setuptools wheel --break-system-packages && \
+    pip install -e . --break-system-packages
 ENV XDG_CACHE_HOME=/cache
 
 ENTRYPOINT []
