--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,5 +1,6 @@
 FROM restic/restic:0.17.3
 
+RUN echo "http://dl-cdn.alpinelinux.org/alpine/edge/main" >> /etc/apk/repositories
 RUN apk update && apk add \
     python3 \
     py3-pip \
