--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -5,6 +5,7 @@ name: Create and publish a Docker image
 on:
   push:
     branches: ['master']
+    tags: ['*']
     paths-ignore:
         - README.MD
         - LICENSE
