--- a/swarm-stack.yml
+++ b/swarm-stack.yml
@@ -4,7 +4,7 @@ services:
   mariadb:
     image: mariadb:10
     labels:
-      restic-compose-backup.mariadb: "true"
+      stack-back.mariadb: "true"
     environment:
       - MYSQL_ROOT_PASSWORD=my-secret-pw
       - MYSQL_DATABASE=mydb
@@ -17,7 +17,7 @@ services:
   files:
     image: nginx:1.17-alpine
     labels:
-      restic-compose-backup.volumes: "true"
+      stack-back.volumes: "true"
     volumes:
       - files:/srv/files
 
