--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,8 +6,8 @@ services:
       - restic_compose_backup.env
       # - alerts.env
     labels:
-      restic-compose-backup.volumes: true
-      restic-compose-backup.volumes.include: 'src'
+      stack-back.volumes: true
+      stack-back.volumes.include: 'src'
     networks:
       - default
       - global
@@ -19,12 +19,12 @@ services:
       # Map restic cache
       - ./restic_cache:/cache
       # Map in project source in dev
-      - ./src:/restic-compose-backup
+      - ./src:/stack-back
   web:
     image: nginx
     labels:
-      restic-compose-backup.volumes: true
-      restic-compose-backup.volumes.include: "/tests"
+      stack-back.volumes: true
+      stack-back.volumes.include: "/tests"
     volumes:
       - ./src/tests:/srv/tests
       - ./.vscode:/srv/code
@@ -35,7 +35,7 @@ services:
   mysql5:
     image: mysql:5
     labels:
-      restic-compose-backup.mysql: true
+      stack-back.mysql: true
     environment:
       - MYSQL_ROOT_PASSWORD=my-secret-pw
       - MYSQL_DATABASE=mydb
@@ -47,7 +47,7 @@ services:
   mysql8:
     image: mysql:8
     labels:
-      restic-compose-backup.mysql: true
+      stack-back.mysql: true
     environment:
       - MYSQL_ROOT_PASSWORD=my-secret-pw
       - MYSQL_DATABASE=mydb
@@ -59,7 +59,7 @@ services:
   mariadb:
     image: mariadb:10
     labels:
-      restic-compose-backup.mariadb: true
+      stack-back.mariadb: true
     environment:
       - MYSQL_ROOT_PASSWORD=my-secret-pw
       - MYSQL_DATABASE=mydb
@@ -71,7 +71,7 @@ services:
   postgres:
     image: postgres:11
     labels:
-      restic-compose-backup.postgres: true
+      stack-back.postgres: true
     environment:
       - POSTGRES_USER=pguser
       - POSTGRES_PASSWORD=pgpassword
