update template defaults

--- a/stack-back.env.template
+++ b/stack-back.env.template
@@ -4,12 +4,12 @@
 # DOCKER_TLS_VERIFY=1
 # DOCKER_CERT_PATH=''
 
-SWARM_MODE=true
+SWARM_MODE=false
 INCLUDE_PROJECT_NAME=false
 EXCLUDE_BIND_MOUNTS=false
 
-RESTIC_REPOSITORY=/restic_data
-RESTIC_PASSWORD=password
+RESTIC_REPOSITORY=/restic_backups
+RESTIC_PASSWORD=thisdecryptsyourbackupsdontloseit
 
 RESTIC_KEEP_DAILY=7
 RESTIC_KEEP_WEEKLY=4
@@ -17,7 +17,7 @@ RESTIC_KEEP_MONTHLY=12
 RESTIC_KEEP_YEARLY=3
 
 LOG_LEVEL=info
-CRON_SCHEDULE=10 2 * * *
+CRON_SCHEDULE=0 2 * * *
 
 # EMAIL_HOST=
 # EMAIL_PORT=
@@ -25,7 +25,7 @@ CRON_SCHEDULE=10 2 * * *
 # EMAIL_HOST_PASSWORD=
 # EMAIL_SEND_TO=
 
-# DISCORD_WEBHOOK=u
+# DISCORD_WEBHOOK=
 
 # Various env vars for restic : https://restic.readthedocs.io/en/stable/040_backup.html#environment-variables
 # RESTIC_REPOSITORY                   Location of repository (replaces -r)
