fix tag workflow

--- a/.github/workflows/tag-updates.yml
+++ b/.github/workflows/tag-updates.yml
@@ -36,8 +36,14 @@ jobs:
           sed -i "s/__version__ = .*/__version__ = \"${clean_version}\"/" src/restic_compose_backup/__init__.py
           sed -i "s/release = .*/release = \"${clean_version}\"/" docs/conf.py
 
-      - name: Commit changes and push version tag
+      - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: automated version bump
-          tagging_message: ${{ steps.version.outputs.new_tag }}
+
+      - name: Push version tag
+        uses: anothrNick/github-tag-action@1.64.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          WITH_V: true
+          DEFAULT_BUMP: patch
