--- a/.github/workflows/tag-updates.yml
+++ b/.github/workflows/tag-updates.yml
@@ -44,6 +44,6 @@ jobs:
       - name: Push version tag
         uses: anothrNick/github-tag-action@1.64.0
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PAT }}
           WITH_V: true
           DEFAULT_BUMP: patch
