--- a/.github/workflows/tag-updates.yml
+++ b/.github/workflows/tag-updates.yml
@@ -44,5 +44,4 @@ jobs:
         uses: anothrNick/github-tag-action@1.64.0
         env:
           GITHUB_TOKEN: ${{ secrets.PAT }}
-          WITH_V: true
-          DEFAULT_BUMP: patch
+          CUSTOM_TAG: ${{ steps.version.outputs.new_tag }}
