--- a/.github/workflows/tag-updates.yml
+++ b/.github/workflows/tag-updates.yml
@@ -43,5 +43,5 @@ jobs:
       - name: Push version tag
         uses: anothrNick/github-tag-action@1.64.0
         env:
-          GITHUB_TOKEN: ${{ secrets.PAT }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CUSTOM_TAG: ${{ steps.version.outputs.new_tag }}
